# telegram-publisher

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-production.yml  deploy-stage.yml  linters.yml  tests.yml
etc/: crontab_production.txt  crontab_staging.txt
telegram_publisher/: __init__.py  bot_setup.py  message_presenter.py  models.py  publisher.py  schemas.py  settings.py  trips_selector.py
tests/: conftest.py
tests/telegram_publisher/: test_get_top_trips.py  test_main.py
tests/telegram_publisher/publisher/: test_airline_ticket_url.py  test_choose_picture.py  test_main.py  test_publish.py  test_transform_currency_code.py  test_trip_description.py
tests/telegram_publisher/trips_selector/: test_fetch_trips.py  test_get_top_trips.py  test_get_weekend_range_in_local_tz.py
